# host-coreclr

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
dotnet/: NetApplication.sln
dotnet/NetApplication/: Program.cs
include/host-coreclr/: core_clr.h  coreclrhost.h  helpers.h
src/: CMakeLists.txt
src/coreclr/: CMakeLists.txt  core_clr.cpp  helpers.cpp
src/coreclr-example/: CMakeLists.txt  main.cpp
